<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">
    <Button
        android:id="@+id/btncarte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cartes"
        android:backgroundTint="#613C6B"
        android:textColor="#F5ECE8"/>
    <Button
        android:id="@+id/btngab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gab"
        android:backgroundTint="#613C6B"
        android:textColor="#F5ECE8"/>
    <Button
        android:id="@+id/btntpe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tpe"
        android:backgroundTint="#613C6B"
        android:textColor="#F5ECE8"/>
    <Button
        android:id="@+id/btncompte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comptes"
        android:backgroundTint="#613C6B"
        android:textColor="#F5ECE8"/>
    <Button
        android:id="@+id/btnflash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flash"
        android:backgroundTint="#613C6B"
        android:textColor="#F5ECE8"/>
    <Button
        android:id="@+id/btnmoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/money"
        android:backgroundTint="#613C6B"
        android:textColor="#F5ECE8"/>
    <Button
        android:id="@+id/btnefirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/efirst"
        android:backgroundTint="#613C6B"
        android:textColor="#F5ECE8"/>
    <Button
        android:id="@+id/btnmoneygram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/money_gram"
        android:backgroundTint="#613C6B"
        android:textColor="#F5ECE8"/>
    <Button
        android:id="@+id/btnsmallworld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/small_world"
        android:backgroundTint="#613C6B"
        android:textColor="#F5ECE8"/>
    <Button
        android:id="@+id/btnsmsfirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smsfirst"
        android:backgroundTint="#613C6B"
        android:textColor="#F5ECE8"/>
    <Button
        android:id="@+id/btnmac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mac"
        android:backgroundTint="#613C6B"
        android:textColor="#F5ECE8"/>

</LinearLayout>