<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Selectionnez une region"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25dp"/>
    <Button
        android:id="@+id/btnadamaoua"
        android:text="@string/adamaoua"
        android:textSize="22dp"
        android:textStyle="italic"
        android:textColor="#F5ECE8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="#391876"/>
    <Button
        android:id="@+id/btncentre"
        android:text="@string/centre"
        android:textSize="22dp"
        android:textStyle="italic"
        android:textColor="#F5ECE8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="#391876"/>
    <Button
        android:id="@+id/btnest"
        android:text="@string/est"
        android:textSize="22dp"
        android:textStyle="italic"
        android:textColor="#F5ECE8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="#391876"/>
    <Button
        android:id="@+id/btnextreme_nord"
        android:text="@string/extreme_nord"
        android:textSize="22dp"
        android:textStyle="italic"
        android:textColor="#F5ECE8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="#391876"/>
    <Button
        android:id="@+id/btnlittoral"
        android:text="@string/littoral"
        android:textSize="22dp"
        android:textStyle="italic"
        android:textColor="#F5ECE8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="#391876"/>
    <Button
        android:id="@+id/btnnord"
        android:text="@string/nord"
        android:textSize="22dp"
        android:textStyle="italic"
        android:textColor="#F5ECE8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="#391876"/>
    <Button
        android:id="@+id/btnnord_ouest"
        android:text="@string/nord_ouest"
        android:textSize="22dp"
        android:textStyle="italic"
        android:textColor="#F5ECE8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="#391876"/>
    <Button
        android:id="@+id/btnouest"
        android:text="@string/ouest"
        android:textSize="22dp"
        android:textStyle="italic"
        android:textColor="#F5ECE8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="#391876"/>
    <Button
        android:id="@+id/btnsud"
        android:text="@string/sud"
        android:textSize="22dp"
        android:textStyle="italic"
        android:textColor="#F5ECE8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="#391876"/>
    <Button
        android:id="@+id/btnsud_ouest"
        android:text="@string/sud_ouest"
        android:textSize="22dp"
        android:textStyle="italic"
        android:textColor="#F5ECE8"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="#391876"/>

</LinearLayout>