<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choice_search"
        android:textSize="50px"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:textAppearance="@style/ThemeOverlay.AppCompat.Dark"
        />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="6"
        android:columnCount="2"
        >
        <Button
            android:id="@+id/btnagence1"
            android:text="@string/agences"
            android:textStyle="italic"
            android:layout_height="155dp"
            android:layout_width="190dp"
            android:textColor="#F5ECE8"
            android:backgroundTint="#993159"
            android:layout_marginLeft="4px"/>
        <Button
            android:id="@+id/btngab1"
            android:text="@string/gab"
            android:textStyle="italic"
            android:textColor="#F5ECE8"
            android:layout_height="155dp"
            android:layout_width="190dp"
            android:backgroundTint="#391876"/>

        <Button
            android:id="@+id/btntpe1"
            android:text="@string/tpe"
            android:textStyle="italic"
            android:textColor="#F5ECE8"
            android:layout_height="155dp"
            android:layout_width="190dp"
            android:backgroundTint="#613C6B"
            android:layout_marginLeft="4px"/>
        <Button
            android:id="@+id/btnflash1"
            android:text="@string/flash"
            android:textStyle="italic"
            android:textColor="#F5ECE8"
            android:layout_height="155dp"
            android:layout_width="190dp"
            android:backgroundTint="#18765B"/>
        <Button
            android:id="@+id/btnsmallword1"
            android:text="@string/small_world"
            android:textStyle="italic"
            android:textColor="#F5ECE8"
            android:layout_height="155dp"
            android:layout_width="190dp"
            android:backgroundTint="#A96312"
            android:layout_marginLeft="4px"/>
        <Button
            android:id="@+id/btnmoneygram1"
            android:text="@string/money_gram"
            android:textStyle="italic"
            android:textColor="#F5ECE8"
            android:layout_height="155dp"
            android:layout_width="190dp"
            android:backgroundTint="#A69A16"
            android:layout_marginLeft="4px"/>

    </GridLayout>


</LinearLayout>